@@ -8,7 +8,7 @@
 	<uri>http://jamwiki.org/taglib</uri>
 	<display-name>JAMWiki tag library</display-name>
 	<description>JAMWiki Tag Library</description>
-	
+
 	<tag>
 		<name>alternate</name>
 		<tag-class>org.jamwiki.taglib.AlternateTag</tag-class>
@@ -86,6 +86,25 @@
 		</attribute>
 		<attribute>
 			<name>value</name>
+			<required>true</required>
+			<rtexprvalue>true</rtexprvalue>
+		</attribute>
+	</tag>
+	<tag>
+		<name>editComment</name>
+		<tag-class>org.jamwiki.taglib.EditCommentTag</tag-class>
+		<body-content>empty</body-content>
+		<description>
+			Parses an edit comment, converting the section name to a link
+			if one is present.
+		</description>
+		<attribute>
+			<name>comment</name>
+			<required>true</required>
+			<rtexprvalue>true</rtexprvalue>
+		</attribute>
+		<attribute>
+			<name>topic</name>
 			<required>true</required>
 			<rtexprvalue>true</rtexprvalue>
 		</attribute>
